<resources>
    <string name="app_name">Online Test App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_now">Start now</string>
    <string name="free">Free</string>
    <string name="login_to_continue">Login To Continue</string>
    <string name="login">Login</string>
    <string name="get_otp">Get OTP</string>
    <string name="submit">Submit</string>
    <string name="total_marks">Total Marks</string>
    <string name="your_marks">Your Marks</string>
    <string name="time_taken">Time taken</string>
    <string name="total_question">Total Question</string>
    <string name="correct_answer">Correct Answer</string>
    <string name="incorrect_answer">Wrong Answer</string>
    <string name="not_answered">Not Answered</string>
    <string name="solution">Solution</string>
    <string name="right_answer">Right Answer</string>
    <string name="result_history">Result History</string>
</resources>